# MessageChain

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  README.md  SECURITY.md  client.py  pyproject.toml  run_node.py  server.py
.github/workflows/: tests.yml
deploy/: cold_key_ceremony.py  devnet_soak.py  e2e_test.py  launch_single_validator.py  live_test.py  stress_test.py  test_server.py
deploy/kill-switch/: main.py
deploy/systemd/: journald-messagechain.conf  messagechain-validator-prototype.conf.example  messagechain-validator.service
docs/: backup-restore-runbook.md  cold-key-ceremony-simple.md  going-live.md  key-rotation-runbook.md  known-issues.md  launch-readiness.md  mainnet-params.md  operator-action-items.md  second-validator-onboarding.md  security-model.md  system-audit.md  tor-setup.md
examples/: messagechain-rotate-key.service.example  messagechain-rotate-key.timer.example  messagechain-upgrade.service.example  messagechain-upgrade.timer.example  messagechain-validator.service.example
messagechain/: __init__.py  __main__.py  cli.py  config.py  config_local.py.example  release_signers.py  validation.py
messagechain/anchoring/: __init__.py  bitcoin_anchor.py  bitcoin_rpc.py
messagechain/consensus/: archive_challenge.py  archive_duty.py  archive_proof_mempool.py  attestation.py  attester_committee.py  block_producer.py  bogus_rejection_evidence.py  bootstrap_gradient.py  censorship_evidence.py  checkpoint.py  equivocation_watcher.py  finality.py  forced_inclusion.py  fork_choice.py  fork_emergency.py  height_guard.py  honesty_curve.py  inactivity.py  inclusion_attestation.py  inclusion_list.py  non_response_evidence.py  pos.py  proposer_duty.py  randao.py  reputation_lottery.py  signaling.py  slashing.py  state_checkpoint.py  validator_versions.py  vrf.py  witness_submission.py
messagechain/core/: authority_key.py  block.py  blockchain.py  bootstrap.py  compression.py  emergency_revoke.py  entity_ref.py  key_rotation.py  mempool.py  reaction.py  receipt_subtree_root.py  registration.py  release_announce.py  release_version.py  spv.py  staking.py  state_tree.py  transaction.py  transfer.py  varint.py  versioning.py  witness.py
messagechain/crypto/: hash_sig.py  hashing.py  keys.py  merkle_cache.py  sig_cache.py  threshold_rsa.py
messagechain/economics/: auto_fee.py  deflation.py  dynamic_fee.py  escrow.py  fee_estimator.py  inflation.py
scripts/: generate_cold_authority_key.py  generate_faucet_key.py  install-validator.sh
tests/: __init__.py  conftest.py  test_acks_observed_block_field.py  test_address_checksum.py  test_affected_entities_canonical_registry.py  test_announce_offense_on_malformed.py  test_anti_bloat.py  test_anti_eclipse.py  test_archive_bundle_block_integration.py  test_archive_challenge.py  test_archive_duty.py  test_archive_duty_persist.py  test_archive_duty_wiring.py  test_archive_economic_model.py  test_archive_fair_selection.py  test_archive_multi_height.py  test_archive_proof_bundle.py  test_archive_rewards_wiring.py  test_archive_sample_strength.py  test_archive_signed_proofs.py  test_archive_sybil_bind.py  test_archive_widen_surface.py  test_ascii_messages.py  test_async_task_error_handling.py  test_atomic_persistence.py  test_attestation.py  test_attestation_no_live_fallback.py  test_attester_cap_fix.py  test_attester_committee.py  test_attester_fee_funding.py  test_attester_reward_cap.py  test_attester_reward_split.py  test_audit_critical_2026_04_25.py  test_audit_critical_2026_04_25_r2.py  test_audit_critical_2026_04_25_r3.py  test_audit_critical_2026_04_26_r10.py  test_audit_critical_2026_04_26_r11.py  test_audit_critical_2026_04_26_r12.py  test_audit_critical_2026_04_26_r4.py  test_audit_critical_2026_04_26_r5.py  (+363 more)
tools/: fee_model.py  fee_model_findings.md
(+41 files in other folders)
