[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "messagechain"
version = "1.21.0"
description = "Quantum-resistant proof-of-stake message chain"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
# Intentionally zero runtime deps.  Everything uses the stdlib — SHA3 via
# hashlib, TCP sockets via asyncio, SQLite via sqlite3.  Keeping the dep
# graph empty is a security principle (no supply-chain risk) and a
# long-horizon stability principle (no dep breaks in 2125).
dependencies = []

[project.scripts]
messagechain = "messagechain.cli:main"

[project.urls]
Homepage = "https://github.com/ben-arnao/MessageChain"

[tool.setuptools]
# Ship the `messagechain` package tree + the top-level client.py / server.py
# so `pip install .` followed by `messagechain generate-key` works.
py-modules = ["client", "server"]

[tool.setuptools.packages.find]
include = ["messagechain*"]
exclude = ["tests*", "deploy*", "docs*", ".claude*"]

[tool.setuptools.package-data]
# Ship the static HTML page served by the public-feed endpoint so
# `pip install .` deployments can expose /v1/latest + the bundled viewer.
messagechain = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -n auto              parallelise across CPU cores (pytest-xdist)
# --timeout=30         abort any test that stalls > 30s (pytest-timeout)
#                      — a hanging test otherwise burns a whole worker
# --timeout-method=thread   works on Windows; main-thread interrupt
# --reruns 1           one silent retry for xdist worker-crash victims
#                      that happen to be scheduled alongside a leaky
#                      test.  Tests that are genuinely flaky should be
#                      fixed, not papered over — so the retry count is
#                      capped at 1.
# See CLAUDE.md "Test performance rules" for the why behind each flag.
# Dev deps (not installed by the project — install locally):
#     pip install pytest-xdist pytest-timeout pytest-rerunfailures
addopts = "-n auto --timeout=30 --timeout-method=thread --reruns 1 --reruns-delay 1"
markers = [
    "slow: run with production MERKLE_TREE_HEIGHT=10 (deselect with '-m \"not slow\"')",
]
# Parallel-by-default via pytest-xdist; override with `-n 0` for serial.
# Run fast tests only: python -m pytest -m "not slow"
